[package]
name = "do-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
rusqlite = { version = "0.26", features = ["bundled"] }
sqlite-vfs = { git = "https://github.com/rkusa/sqlite-vfs.git" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[patch.crates-io]
rusqlite = { git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
