[package]
name = "do-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.26" }
sqlite-vfs = { git = "https://github.com/rkusa/sqlite-vfs.git" }

[patch.crates-io]
rusqlite = { version = "0.26", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
libsqlite3-sys = { version = "0.23", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
